@@ -81,9 +81,9 @@
     <Reference Include="mscorlib">
       <Name>mscorlib</Name>
     </Reference>
-    <Reference Include="nunit.framework">
-      <Name>nunit.framework</Name>
-      <HintPath>..\..\..\..\build\net-2.0\debug\nunit.framework.dll</HintPath>
+    <Reference Include="nunit.framework, Version=2.2.8.0, Culture=neutral, PublicKeyToken=96d09a1eb7f44a77, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\build\net-3.5\debug\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System">
       <Name>System</Name>
@@ -135,6 +135,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Test\MacroTestCase.cs" />
+    <Compile Include="ArithmeticExpressionTestCase.cs" />
     <Compile Include="Test\MethodCallTestCase.cs" />
     <Compile Include="Test\ObjectComparisonTestCase.cs">
       <SubType>Code</SubType>
